--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ install:
 - if [ -n "$LATEST_TAG" ]; then
   git fetch ;
   git fetch --tags ;
-  git checkout `../terryfy/git-closest-tag` ;
+  git checkout `../terryfy/git-closest-tag origin/master` ;
   fi
 - python setup.py bdist_wheel
 - rename_wheels dist
