Update to latest terryfy

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,6 @@
 [submodule "terryfy"]
 	path = terryfy
-	url = git://github.com/matthew-brett/terryfy.git
-[submodule "scikit-image"]
-	path = scikit-image
-	url = git://github.com/scikit-image/scikit-image.git
+	url = git://github.com/MacPython/terryfy.git
 [submodule "Cython"]
 	path = Cython
 	url = git://github.com/Cython/Cython.git
