--- a/.travis.yml
+++ b/.travis.yml
@@ -1,27 +1,31 @@
 language:
 - objective-c
 env:
-  global: LATEST_TAG=1
+  global:
+  - BUILD_COMMIT=latest-tag
+  - PROJECT=cython
   matrix:
-  - VERSION=2.7.8
+  - VERSION=2.7.10
   - VERSION=3.2.5
   - VERSION=3.3.5
-  - VERSION=3.4.1
+  - VERSION=3.4.3
 install:
 - source terryfy/travis_tools.sh
 - get_python_environment macpython $VERSION venv
 - pip install delocate
-- if [ -n "$LATEST_TAG" ]; then checkout_closest_tag Cython; fi
-- cd Cython
+- if [ -n "$BUILD_COMMIT" ]; then
+      checkout_commit $PROJECT $BUILD_COMMIT;
+  fi
+- cd $PROJECT
 - python setup.py bdist_wheel
 - delocate-addplat --rm-orig -x 10_9 -x 10_10 dist/*.whl
 - pip install dist/*.whl
 - cd ..
 script:
-- cd Cython
+- cd $PROJECT
 - cython Demos/*.pyx
 - cd ..
-before_deploy: cd Cython/dist
+before_deploy: cd $PROJECT/dist
 deploy:
   provider: cloudfiles
   username: travis-worker
