--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,10 @@ script:
 - cd $REPO_DIR
 - cython Demos/*.pyx
 - cd ..
-before_deploy: cd $REPO_DIR/dist
+before_deploy:
+- cd $REPO_DIR/dist
+# Fix for https://github.com/travis-ci/travis-ci/issues/4635
+- rvm 1.9.3 do gem install net-ssh -v 2.9.2
 deploy:
   provider: cloudfiles
   username: travis-worker
