--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ env:
   - VERSION=3.2.5
   - VERSION=3.3.5
   - VERSION=3.4.3
+  - VERSION=3.5.0
 install:
 - source terryfy/travis_tools.sh
 - get_python_environment macpython $VERSION venv
