Force install of patched wheel

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ install:
 - export CXX=clang++
 - get_python_environment macpython $VERSION venv
 # Install patched version of wheel (patched for 3.5)
-- pip install --no-index -f https://nipy.bic.berkeley.edu/scipy_installers wheel
+- pip install --ignore-installed --no-index -f https://nipy.bic.berkeley.edu/scipy_installers wheel
 - pip install delocate
 - if [ -n "$BUILD_COMMIT" ]; then
       checkout_commit $REPO_DIR $BUILD_COMMIT;
