Remove debug prints; update wheel package
We need to upgrade the 'wheel' package that gets installed by default
by virtualenv, to get the latest.

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,10 @@ env:
   - BUILD_COMMIT=latest-tag
   - REPO_DIR=cython
   matrix:
-# - VERSION=2.7.10
-# - VERSION=3.2.5
-# - VERSION=3.3.5
-# - VERSION=3.4.3
+  - VERSION=2.7.10
+  - VERSION=3.2.5
+  - VERSION=3.3.5
+  - VERSION=3.4.3
   - VERSION=3.5.0
 install:
 - source terryfy/travis_tools.sh
@@ -16,12 +16,12 @@ install:
 - export CXX=clang++
 - get_python_environment macpython $VERSION venv
 - pip install delocate
+# Update to latest wheel package for Python 3.5
+- pip install -U wheel
 - if [ -n "$BUILD_COMMIT" ]; then
       checkout_commit $REPO_DIR $BUILD_COMMIT;
   fi
 - cd $REPO_DIR
-- pip freeze
-- which python
 - python setup.py bdist_wheel
 - delocate-addplat --rm-orig -x 10_9 -x 10_10 dist/*.whl
 - pip install dist/*.whl
