--- a/.travis.yml
+++ b/.travis.yml
@@ -24,11 +24,12 @@ install:
 - python setup.py bdist_wheel
 - delocate-addplat --rm-orig -x 10_9 -x 10_10 dist/*.whl
 - pip install dist/*.whl
-- cd ..
 script:
-- cd $REPO_DIR
-- cython Demos/*.pyx
+# Run tests in repo directory
+- python runtests.py
+# Build demos outside repo directory
 - cd ..
+- 'cython $REPO_DIR/Demos/*.pyx'
 before_deploy:
 - cd $REPO_DIR/dist
 deploy:
