--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,8 @@
+# To change the built commit, update the cython submodule
 language:
 - objective-c
 env:
   global:
-  #- BUILD_COMMIT=latest-tag
-  - BUILD_COMMIT=0.23.5
   - REPO_DIR=cython
   matrix:
   - VERSION=2.7.11
