--- a/appveyor.yml
+++ b/appveyor.yml
@@ -73,8 +73,7 @@ build_script:
 
 test_script:
   # Run some tests
-  - cython cython\Demos\*.pyx
-  - cython cython\Demos\*\*.pyx
+  - cython Demos\*.pyx
 
 after_test:
   # If tests are successful, create binary packages for the project.
@@ -82,7 +81,7 @@ after_test:
 
 artifacts:
   # Archive the generated packages in the ci.appveyor.com build report.
-  - path: .
+  - path: dist\*
 
 on_success:
   # Upload the generated wheel package to Rackspace
