Force use of Python 2.7 for uploading

--- a/.travis.yml
+++ b/.travis.yml
@@ -82,8 +82,8 @@ script:
 
 after_success:
     # Upload wheels to Rackspace container
-    - pip install wheelhouse-uploader
-    - python -m wheelhouse_uploader upload --local-folder
+    - pip2.7 install wheelhouse-uploader
+    - python2.7 -m wheelhouse_uploader upload --local-folder
           ${TRAVIS_BUILD_DIR}/wheelhouse/
           --no-update-index
           wheels
