--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ env:
           "k+rFEWlbje6cBTf9dEvtdTqJ66wgVMTcpy6rSZdHa0A6d21pIyuuKscp/fr++rF9x0DOzXLuuB2g4Wy4HaehGIZYYFrMpW1t8JlQKa6HG8a42AUV2uWPxfVDKdv1tqaJj75Ey+rBy5/gsPIaIIQtpbmwUM/HqzHscxCvpDEE5MU="
 
 language: python
+python: 3.5
 sudo: required
 dist: trusty
 services: docker
@@ -19,57 +20,61 @@ services: docker
 matrix:
   include:
     - os: linux
-      python: 2.7
-      # Change Python version for build / test
-      env: TRAVIS_PYTHON_VERSION=2.6
-    - os: linux
-      python: 2.7
       env:
-      # Change Python version for build / test
-        - TRAVIS_PYTHON_VERSION=2.6
+        - MB_PYTHON_VERSION=2.6
+    - os: linux
+      env:
+        - MB_PYTHON_VERSION=2.6
         - PLAT=i686
     - os: linux
-      python: 2.7
-    - os: linux
-      python: 2.7
       env:
+        - MB_PYTHON_VERSION=2.7
+    - os: linux
+      env:
+        - MB_PYTHON_VERSION=2.7
         - UNICODE_WIDTH=16
     - os: linux
-      python: 2.7
       env:
+        - MB_PYTHON_VERSION=2.7
         - PLAT=i686
     - os: linux
-      python: 2.7
       env:
+        - MB_PYTHON_VERSION=2.7
         - PLAT=i686
         - UNICODE_WIDTH=16
     - os: linux
-      python: 3.3
       env:
+        - MB_PYTHON_VERSION=3.3
+    - os: linux
+      env:
+        - MB_PYTHON_VERSION=3.3
         - PLAT=i686
     - os: linux
-      python: 3.4
-    - os: linux
-      python: 3.4
       env:
+        - MB_PYTHON_VERSION=3.4
+    - os: linux
+      env:
+        - MB_PYTHON_VERSION=3.4
         - PLAT=i686
     - os: linux
-      python: 3.5
-    - os: linux
-      python: 3.5
       env:
+        - MB_PYTHON_VERSION=3.5
+    - os: linux
+      env:
+        - MB_PYTHON_VERSION=3.5
         - PLAT=i686
     - os: osx
       language: objective-c
-      env: TRAVIS_PYTHON_VERSION=2.7
+      env:
+        - MB_PYTHON_VERSION=2.7
     - os: osx
       language: objective-c
       env:
-        - TRAVIS_PYTHON_VERSION=3.4
+        - MB_PYTHON_VERSION=3.4
     - os: osx
       language: objective-c
       env:
-        - TRAVIS_PYTHON_VERSION=3.5
+        - MB_PYTHON_VERSION=3.5
 
 before_install:
     - source multibuild/common_utils.sh
