Exclude the default Python 3.5 build for clarity

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,9 @@ dist: trusty
 services: docker
 
 matrix:
+  exclude:
+    # Exclude the default Python 3.5 build
+    - python: 3.5
   include:
     - os: linux
       env:
