--- a/.travis.yml
+++ b/.travis.yml
@@ -73,6 +73,10 @@ matrix:
     - os: osx
       language: objective-c
       env:
+        - MB_PYTHON_VERSION=3.3
+    - os: osx
+      language: objective-c
+      env:
         - MB_PYTHON_VERSION=3.4
     - os: osx
       language: objective-c
