--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 env:
   global:
       - REPO_DIR=Cython
+      # Remember to edit appveyor.yml too
       - BUILD_COMMIT=0.24.1
       - PLAT=x86_64
       - WHEELHOUSE_UPLOADER_USERNAME=travis-worker
