--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ env:
   global:
       - REPO_DIR=Cython
       # Remember to edit appveyor.yml too
-      - BUILD_COMMIT=0.24.1
+      - BUILD_COMMIT=0.25a0
       - PLAT=x86_64
       - WHEELHOUSE_UPLOADER_USERNAME=travis-worker
       - BUILD_DEPENDS=
