--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ env:
   global:
       - REPO_DIR=Cython
       # Remember to edit appveyor.yml too
-      - BUILD_COMMIT=0.25b0
+      - BUILD_COMMIT=0.25
       - PLAT=x86_64
       - WHEELHOUSE_UPLOADER_USERNAME=travis-worker
       - BUILD_DEPENDS=
