--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ python: 3.5
 sudo: required
 dist: trusty
 services: docker
-osx_image: beta-xcode6.1
+osx_image: xcode6.4
 
 env:
   global:
@@ -84,6 +84,10 @@ matrix:
       language: objective-c
       env:
         - MB_PYTHON_VERSION=3.5
+    - os: osx
+      language: objective-c
+      env:
+        - MB_PYTHON_VERSION=3.6
 
 before_install:
     - source multibuild/common_utils.sh
