--- a/appveyor.yml
+++ b/appveyor.yml
@@ -88,6 +88,8 @@ build_script:
 test_script:
   # Run some tests
   - ps: get-childitem Demos\*.pyx | foreach-object { cython $_ }
+  - set CFLAGS="/Od"
+  - "%WITH_ENV% %PYTHON%\\python.exe runtests.py -vv --no-cpp -j8"
 
 after_test:
   # If tests are successful, create binary packages for the project.
