Try using pip with Python 2

--- a/.travis.yml
+++ b/.travis.yml
@@ -118,6 +118,15 @@ script:
 
 after_success:
     # Upload wheels to Rackspace container
+    # Upload may not work for Python 3.7:
+    # https://github.com/ogrisel/wheelhouse-uploader/issues/27
+    - |
+      if [ -n "$IS_OSX" ]; then
+        # Use system Python
+        deactivate
+        curl -LO https://bootstrap.pypa.io/get-pip.py
+        sudo python get-pip.py
+      fi
     - pip install wheelhouse-uploader
     - python -m wheelhouse_uploader upload --local-folder
           ${TRAVIS_BUILD_DIR}/wheelhouse/
