--- a/appveyor.yml
+++ b/appveyor.yml
@@ -19,6 +19,15 @@ environment:
 
     matrix:
 
+    - PYTHON: C:\Python37
+      PYTHON_VERSION: 3.7
+      PYTHON_ARCH: 32
+
+    - PYTHON: C:\Python37-x64
+      PYTHON_VERSION: 3.7
+      PYTHON_ARCH: 64
+
+
     - PYTHON: "C:\\Python27"
       PYTHON_VERSION: "2.7.x" # currently 2.7.11
       PYTHON_ARCH: "32"
@@ -64,7 +73,10 @@ init:
 install:
   - cmd: echo "Using cmd"
 
-  # Prepend newly installed Python to the PATH of this build (this cannot be
+  # Install Python 3.7.0 if necessary
+  - ps: .\tools\install_python370.ps1
+
+  # Prepend required Python to the PATH of this build (this cannot be
   # done from inside the powershell script as it would require to restart
   # the parent CMD process).
   - SET PATH=%PYTHON%;%PYTHON%\\Scripts;%PATH%
