--- a/.travis.yml
+++ b/.travis.yml
@@ -80,6 +80,13 @@ matrix:
       env:
         - MB_PYTHON_VERSION=3.6
         - PLAT=i686
+    - os: linux
+      env:
+        - MB_PYTHON_VERSION=3.7
+    - os: linux
+      env:
+        - MB_PYTHON_VERSION=3.7
+        - PLAT=i686
 
 before_install:
     - if [ "$TRAVIS_BRANCH" == "daily" ]; then
