--- a/.travis.yml
+++ b/.travis.yml
@@ -43,6 +43,10 @@ matrix:
       language: generic
       env:
         - MB_PYTHON_VERSION=3.6
+    - os: osx
+      language: generic
+      env:
+        - MB_PYTHON_VERSION=3.7
     - os: linux
       env:
         - MB_PYTHON_VERSION=2.7
