--- a/appveyor.yml
+++ b/appveyor.yml
@@ -104,9 +104,8 @@ build_script:
 test_script:
   # Run some tests
   - ps: get-childitem Demos\*.pyx | foreach-object { cython $_ }
-  - "%PYTHON%\\Scripts\\pip.exe install -r test-requirements.txt"
   - set CFLAGS="/Od"
-  - "%WITH_ENV% %PYTHON%\\python.exe runtests.py -vv --no-cpp -j8"
+  - "%WITH_ENV% %PYTHON%\\python.exe runtests.py -vv --no-cpp --no-code-style -j8"
 
 after_test:
   # If tests are successful, create binary packages for the project.
