--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ env:
       - REPO_DIR=Cython
       # Remember to edit appveyor.yml too
       # Also see DAILY_COMMIT below
-      - BUILD_COMMIT=--help
+      - BUILD_COMMIT=0.29.1
       - PLAT=x86_64
       - WHEELHOUSE_UPLOADER_USERNAME=travis-worker
       - BUILD_DEPENDS=
