--- a/.travis.yml
+++ b/.travis.yml
@@ -30,6 +30,10 @@ matrix:
     - os: osx
       language: generic
       env:
+        - MB_PYTHON_VERSION=3.8
+    - os: osx
+      language: generic
+      env:
         - MB_PYTHON_VERSION=3.7
     - os: osx
       language: generic
@@ -90,6 +94,13 @@ matrix:
     - os: linux
       env:
         - MB_PYTHON_VERSION=3.7
+        - PLAT=i686
+    - os: linux
+      env:
+        - MB_PYTHON_VERSION=3.8
+    - os: linux
+      env:
+        - MB_PYTHON_VERSION=3.8
         - PLAT=i686
 
 before_install:
