--- a/appveyor.yml
+++ b/appveyor.yml
@@ -19,6 +19,14 @@ environment:
 
     matrix:
 
+    - PYTHON: "C:\\Python38"
+      PYTHON_VERSION: "3.8.x" # currently 3.8.0
+      PYTHON_ARCH: "32"
+
+    - PYTHON: "C:\\Python38-x64"
+      PYTHON_VERSION: "3.8.x" # currently 3.8.0
+      PYTHON_ARCH: "64"
+
     - PYTHON: "C:\\Python37"
       PYTHON_VERSION: "3.7.x" # currently 3.7.0
       PYTHON_ARCH: "32"
