--- a/.travis.yml
+++ b/.travis.yml
@@ -28,6 +28,7 @@ matrix:
     - python: 3.5
   include:
     - os: osx
+      osx_image: xcode9.4
       language: generic
       env:
         - MB_PYTHON_VERSION=3.8
