--- a/.travis.yml
+++ b/.travis.yml
@@ -28,11 +28,10 @@ matrix:
     - python: 3.5
   include:
     - os: osx
-      # osx_image: xcode9.4
       language: generic
       env:
         - MB_PYTHON_VERSION=3.8
-        - MB_PYTHON_OSX_VER=10.9
+        # - MB_PYTHON_OSX_VER=10.9
     - os: osx
       language: generic
       env:
