--- a/.travis.yml
+++ b/.travis.yml
@@ -116,14 +116,14 @@ before_install:
 install:
     # Maybe get and clean and patch source
     - clean_code $REPO_DIR $BUILD_COMMIT
-    - build_wheel $REPO_DIR $PLAT
+    - PATH=${PATH}:/Library/Frameworks/Python.framework/Versions/${MB_PYTHON_VERSION}/bin  build_wheel $REPO_DIR $PLAT
     # Add Travis build number to wheel name for daily builds
     - if [ "$TRAVIS_BRANCH" == "daily" ]; then
       python add_build_no.py -r -s + $TRAVIS_BUILD_NUMBER $WHEEL_SDIR/*.whl ;
       fi
 
 script:
-    - install_run $PLAT
+    - PATH=${PATH}:/Library/Frameworks/Python.framework/Versions/${MB_PYTHON_VERSION}/bin  install_run $PLAT
 
 after_success:
     # Upload wheels to Rackspace container
