--- a/appveyor.yml
+++ b/appveyor.yml
@@ -11,7 +11,7 @@ os: Visual Studio 2015
 environment:
     global:
       # Remember to edit .travis.yml too
-      BUILD_COMMIT: 0.29.16
+      BUILD_COMMIT: c8425604fc3e4ea846016689942fa98e886b5f4f
       WHEELHOUSE_UPLOADER_USERNAME: travis-worker
       WHEELHOUSE_UPLOADER_SECRET:
         secure:
