--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ env:
       - REPO_DIR=Cython
       # Remember to edit appveyor.yml too
       # Also see DAILY_COMMIT below
-      - BUILD_COMMIT=c8425604fc3e4ea846016689942fa98e886b5f4f
+      - BUILD_COMMIT=3.0a1
       - PLAT=x86_64
       - MB_PYTHON_OSX_VER=10.9
       - WHEELHOUSE_UPLOADER_USERNAME=travis-worker
