--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ env:
       - REPO_DIR=Cython
       # Remember to edit appveyor.yml too
       # Also see DAILY_COMMIT below
-      - BUILD_COMMIT=0.29.17
+      - BUILD_COMMIT=b648b65ac39291aa546b58e44c8576869c351b66
       - PLAT=x86_64
       - MB_PYTHON_OSX_VER=10.9
       - WHEELHOUSE_UPLOADER_USERNAME=travis-worker
