--- a/appveyor.yml
+++ b/appveyor.yml
@@ -11,7 +11,7 @@ os: Visual Studio 2015
 environment:
     global:
       # Remember to edit .travis.yml too
-      BUILD_COMMIT: 0.29.17
+      BUILD_COMMIT: b648b65ac39291aa546b58e44c8576869c351b66
       WHEELHOUSE_UPLOADER_USERNAME: travis-worker
       WHEELHOUSE_UPLOADER_SECRET:
         secure:
