--- a/.travis.yml
+++ b/.travis.yml
@@ -117,8 +117,8 @@ deploy:
   provider: releases
   api_key:
     secure: KvDNzF0BiR2ExM4+Ab0m0xEbuVIvTCKyWZdUBt8zSOH6x+wva2lAuWGX3JJV45tzmo6qTk6kxTk0pm5hmWDeYRNnCl+Gub8PpAsFciBtj8wfLfqBXfJdX/C7LDIAnyyIXcnrsEOGa4yOfTZpmimQSMUUhaPDoSI8IBPypA/mSNo=
-  file: "${TRAVIS_BUILD_DIR}/${REPO_DIR}/*.whl"
+  file: "${TRAVIS_BUILD_DIR}/${WHEEL_SDIR}/*.whl"
+  skip_cleanup: true
   on:
     repo: MacPython/cython-wheels
     tags: true
-  skip_cleanup: 'true'
