--- a/.travis.yml
+++ b/.travis.yml
@@ -104,11 +104,11 @@ install:
     # Maybe get and clean and patch source
     - clean_code $REPO_DIR $BUILD_COMMIT
     - PATH=${PATH}:/Library/Frameworks/Python.framework/Versions/${MB_PYTHON_VERSION}/bin  build_wheel $REPO_DIR $PLAT
-    - echo "$PWD"; echo "$TRAVIS_BUILD_DIR"; ls -Rl
     # Add Travis build number to wheel name for daily builds
     - if [ "$TRAVIS_BRANCH" == "daily" ]; then
       python add_build_no.py -r -s + $TRAVIS_BUILD_NUMBER $WHEEL_SDIR/*.whl ;
       fi
+    - ls -l $PWD/$WHEEL_SDIR/*.whl
 
 script:
     - PATH=${PATH}:/Library/Frameworks/Python.framework/Versions/${MB_PYTHON_VERSION}/bin  install_run $PLAT
