--- a/appveyor.yml
+++ b/appveyor.yml
@@ -11,7 +11,7 @@ os: Visual Studio 2015
 environment:
     global:
       # Remember to edit .travis.yml too
-      BUILD_COMMIT: 4625219f9ffff32348122c5d52464df877ce7f17
+      BUILD_COMMIT: 0.29.18
 
     matrix:
 
