--- a/appveyor.yml
+++ b/appveyor.yml
@@ -11,7 +11,7 @@ os: Visual Studio 2015
 environment:
     global:
       # Remember to edit .travis.yml too
-      BUILD_COMMIT: 0.29.18
+      BUILD_COMMIT: a57de922bbcfaa44ca4e7580e69ec9f5b6b62ad4
 
     matrix:
 
