--- a/.travis.yml
+++ b/.travis.yml
@@ -67,12 +67,26 @@ matrix:
         - MB_PYTHON_VERSION=3.5
         - PLAT=i686
     - os: linux
+      arch: arm64
+      env:
+      - MB_PYTHON_VERSION=3.5
+      - PLAT=aarch64
+      - MB_ML_VER=2014
+      - DOCKER_TEST_IMAGE=multibuild/xenial_arm64v8
+    - os: linux
       env:
         - MB_PYTHON_VERSION=3.6
     - os: linux
       env:
         - MB_PYTHON_VERSION=3.6
         - PLAT=i686
+    - os: linux
+      arch: arm64
+      env:
+      - MB_PYTHON_VERSION=3.6
+      - PLAT=aarch64
+      - MB_ML_VER=2014
+      - DOCKER_TEST_IMAGE=multibuild/xenial_arm64v8
     - os: linux
       env:
         - MB_PYTHON_VERSION=3.7
@@ -81,12 +95,26 @@ matrix:
         - MB_PYTHON_VERSION=3.7
         - PLAT=i686
     - os: linux
+      arch: arm64
+      env:
+      - MB_PYTHON_VERSION=3.7
+      - PLAT=aarch64
+      - MB_ML_VER=2014
+      - DOCKER_TEST_IMAGE=multibuild/xenial_arm64v8
+    - os: linux
       env:
         - MB_PYTHON_VERSION=3.8
     - os: linux
       env:
         - MB_PYTHON_VERSION=3.8
         - PLAT=i686
+    - os: linux
+      arch: arm64
+      env:
+      - MB_PYTHON_VERSION=3.8
+      - PLAT=aarch64
+      - MB_ML_VER=2014
+      - DOCKER_TEST_IMAGE=multibuild/xenial_arm64v8
 
 before_install:
     - if [ "$TRAVIS_BRANCH" == "daily" ]; then
