--- a/appveyor.yml
+++ b/appveyor.yml
@@ -15,6 +15,14 @@ environment:
 
     matrix:
 
+    - PYTHON: "C:\\Python39"
+      PYTHON_VERSION: "3.9.x" # currently 3.9.1
+      PYTHON_ARCH: "32"
+
+    - PYTHON: "C:\\Python39-x64"
+      PYTHON_VERSION: "3.9.x" # currently 3.9.0
+      PYTHON_ARCH: "64"
+
     - PYTHON: "C:\\Python38"
       PYTHON_VERSION: "3.8.x" # currently 3.8.0
       PYTHON_ARCH: "32"
