--- a/.travis.yml
+++ b/.travis.yml
@@ -167,5 +167,5 @@ deploy:
   file: "${TRAVIS_BUILD_DIR}/${WHEEL_SDIR}/*.whl"
   skip_cleanup: true
   on:
-    repo: cython/cython-wheels
+    repo: MacPython/cython-wheels
     tags: true
